# model-checker

./: .gitignore  .prettierignore  CONTEXT.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: availability.rs  commands.rs  discovery.rs  error.rs  http_util.rs  lib.rs  main.rs  secrets.rs  storage.rs
src-tauri/src/domain/: inference.rs  mod.rs  status.rs
src/components/: ConnectionDetail.tsx  ConnectionForm.tsx  ConnectionList.tsx  StatusBadge.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx
src/lib/: api.ts  utils.ts
